--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/sever.ts",
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "ts-node-dev src/server.ts",
     "build": "tsc",
     "dev": "tsnd --exit-child src/server.ts"
   },
