--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/sever.ts",
   "scripts": {
-    "postinstall": "tsc",
+    "start": "ts-node-dev src/server.ts",
+    "build": "tsc",
     "dev": "tsnd --exit-child src/server.ts"
   },
   "keywords": [],
@@ -16,7 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "firebase": "^9.12.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
